# WorkInPaddleInference

./: PaddleInference_save.md  README.md  README_GemmEpilogue.md  README_triton.md
GemmEpilogue/: README_GemmEpilogue.md  d2s_gemm_epilogue.py
HorizontalFusionPass/: README_HorizontalFusionPass.md  net.py
LargeDIT/: README_largeDIT.md  class_conditional_image_generation-large_dit_3b.py  class_conditional_image_generation-large_dit_7b.py  dit_llama.py
MaskedMultiheadAttention/: 01-many-mmha.py  README_MMHA.md  profile_for_mmha.sh  run_mmha_simple.sh
MyLearn/Bashs/: draw.py  resProcess.py
MyLearn/MMHA_save/: A100_arch.cu  README  logitsDotV_my.cu
MyLearn/TRT_Learn/: qdq_conv.cc
MyLearn/cudaNative/: Gmem2Smem.ptx  common.cuh  gemm  gemm_my_bkp.cu  hgemm_my  hgemm_my.cu  hgemm_tensorcore  hgemm_tensorcore.cu  run.sh
MyLearn/cute_learn/: gemm_multiStage_cute.cu  gemm_multiStage_cute_my.cu
MyLearn/cutlass_learn/: curand.cu
MyLearn/cutlass_learn/FC/: fc_bias_act.py  fc_common.py  fc_util.cu  fused_fc_add_act_kernel.cu  main.cu  (+1 more)
MyLearn/cutlass_learn/FC_example/: CMakeLists.txt  fc_bias_act_example.cu
MyLearn/cutlass_learn/splitK/: CMakeLists.txt  README.md  gemm_epilogue_decl.h  gemm_epilogue_util.cu  gemm_epilogue_util.h  main.cu  matmul_add_sm80_fp16_15.cu  matmul_add_sm80_fp16_81.cu  matmul_add_sm80_fp16_99.cu
MyLearn/triton_learn/: elementwiseAdd.py  fused_moe.py  generate_wint8_config.py  matmul_example.py  matmul_my.py  run_generate_wint8.sh  setup_cuda.py  test_wint8.py  triton_matmul_utils.py  triton_wint8.cu
TritonKernel/: README_triton.md
(+5 files in other folders)
